--- a/BkashPayment/app/src/main/AndroidManifest.xml
+++ b/BkashPayment/app/src/main/AndroidManifest.xml
@@ -2,13 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.blackbirds.shakil.bkashpayment">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BkashPayment">
+        android:theme="@style/Theme.BkashPayment"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".PaymentSuccessActivity"></activity>
+        <activity android:name=".BkashActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
